--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "strict-reset.css",
   "version": "0.5.0",
-  "main": "strict-reset.css",
+  "main": "_strict-reset.scss",
   "description": "Modern CSS reset",
+  "keywords": ["reset", "reset.css", "strict-reset.css"],
   "license": "MIT"
 }
